# dot

./: Cargo.toml  LICENSE  README.md  package.json  style.css
.github/actions/setup-rust/: action.yaml
.github/workflows/: ci.yaml  code_analysis.yaml
locales/: languages.yaml
locales/en/: default.ftl
src/: components.rs  config.rs  forms.rs  icons.rs  lib.rs  pagination.rs  server.rs  server_functions.rs  ssr.rs
src/leptos/: forms.rs  icons.rs  mod.rs  server_functions.rs
src/server/: config.rs  mod.rs
