[package]
name = "dot"
version = "0.0.0-alpha.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
leptos = "0.8.2"
leptos_axum = { version = "0.8.2", optional = true }
leptos_meta = "0.8.2"
leptos_router = "0.8.2"
tokio = { version = "1.45.0", optional = true }

[features]
hydrate = ["dep:console_error_panic_hook", "leptos/hydrate"]
ssr = [
    "dep:axum",
    "dep:leptos_axum",
    "dep:tokio",
    "leptos/ssr",
    "leptos_meta/ssr",
]
