[package]
name = "dot"
version = "0.0.0-alpha.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0", optional = true }
axum = { version = "0.8", optional = true }
cookie = { version = "0.18", features = ["private"], optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
dotenvy = { version = "0.15", optional = true }
env_logger = { version = "0.11", optional = true }
figment = { version = "0.10", features = ["env"], optional = true }
fluent-templates = "0.13"
fred = { version = "10.1", optional = true }
leptos = "0.8"
leptos_axum = { version = "0.8", optional = true }
leptos-fluent = { version = "0.2.16", features = ["yaml"] }
leptos_meta = "0.8"
leptos_router = "0.8"
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3", optional = true }
tokio = { version = "1.46", optional = true }
tower-sessions = { version = "0.14", features = ["private"], optional = true }
tower-sessions-redis-store = { version = "0.16", optional = true }
unic-langid = { version = "0.9", features = ["serde"], optional = true }
uuid = { version = "1.17", features = ["js", "serde", "v4"] }
validator = "0.20"
web-sys = "0.3"

[features]
hydrate = [
    "dep:console_error_panic_hook",
    "leptos/hydrate",
    "leptos-fluent/hydrate",
]
server = [
    "dep:anyhow",
    "dep:axum",
    "dep:cookie",
    "dep:dotenvy",
    "dep:env_logger",
    "dep:figment",
    "dep:fred",
    "dep:leptos_axum",
    "dep:time",
    "dep:tokio",
    "dep:tower-sessions",
    "dep:tower-sessions-redis-store",
    "dep:unic-langid",
    "leptos/ssr",
    "leptos-fluent/axum",
    "leptos-fluent/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "validator/derive",
]
